Use other role for release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,7 @@
 on:
   push:
     tags:
+    - '*'
 
 name: Create Release
 
@@ -15,13 +16,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Create Release
-        id: create_release
-        uses: elgohr/Github-Release-Action@v5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          title: Release ${{ github.ref }}
       - name: fetch linux builds (zip)
         uses: dawidd6/action-download-artifact@v2
         with:
@@ -40,13 +34,7 @@ jobs:
           workflow: cmake-windows.yml
           name: "Release dll files"
           path: dll
-      - name: Upload Release Asset
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: ncipollo/release-action@v1
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dll/saga_watem.zip
-          asset_name: saga_watem_windows_${{ github.ref }}.zip
-          asset_content_type: application/zip
+          artifacts: "dll/*,linux/*,deb/*"
+          omitBody: true
