--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,9 @@ jobs:
   create_release:
     name: Create Release
     runs-on: ubuntu-latest
+    needs:
+    - build-linux
+    - build-windows
     steps:
       - uses: actions/checkout@v3
       - name: fetch linux builds (zip)
